--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@vercel/edge-config": "^0.4.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
